Added support for #2 loading dependencies in separate repositories. Fixed issues with schema and working on more dynamic minecraft loading.